@@ -62,5 +62,3 @@ fashion.  expect might be useful for testing the PAM wrappers.
 * Pass configured sysconfdir, pkglibexecdir prefix exec_prefix etc. to scripts.
 
 * basic-keyfile should not use string_list.
-
-* Check that schroot-mount ensures fs_dir mountpoints have a leading /.
